[Refactor] 마이페이지 글 가져오는 순서 변경